Refs #8247; restricted mouse scroll to the coverflow instead of body; removed body customization from the css of the coverflow to prevent search buttons from spanning over next line

--- a/trunk/eea.mediacentre/branches/plone4/src/eea/mediacentre/skins/eea_multimedia/coverflow/css/demos.css
+++ b/trunk/eea.mediacentre/branches/plone4/src/eea/mediacentre/skins/eea_multimedia/coverflow/css/demos.css
@@ -1,7 +1,3 @@
-body {
-	font-size: 62.5%;
-	background:#000;
-}
 
 table {
 	font-size: 1em;
